# CTA-2045-UCM-CPP-Library

./: CMakeLists.txt  LICENSE  README.md
cea2045/cea2045/communicationport/: CEA2045SerialPort.cpp  CEA2045SerialPort.h  ICommunicationPort.h
cea2045/cea2045/device/: CEA2045Device.cpp  CEA2045Device.h  CEA2045DeviceUCM.cpp  CEA2045DeviceUCM.h  DeviceFactory.cpp  DeviceFactory.h  ICEA2045Device.cpp  ICEA2045Device.h  ICEA2045DeviceUCM.h  MessageHandler.cpp  MessageHandler.h
cea2045/cea2045/device/message/: Basic.cpp  (+19 more)
cea2045/cea2045/linklayer/: ILinkLayerComm.h  ILinkLayerCommRecv.cpp  ILinkLayerCommRecv.h  ILinkLayerCommSend.h  LinkLayerCommImpl.cpp  LinkLayerCommImpl.h  ReceiveBuffer.cpp  ReceiveBuffer.h
cea2045/cea2045/message/: CEA2045Message.h  CEA2045MessageBasic.h  CEA2045MessageCommodityResponse.h  CEA2045MessageDataLink.h  CEA2045MessageDeviceInfoResponse.h  CEA2045MessageGetPresentTemperatureResponse.h  CEA2045MessageGetSetpointsResponse.h  CEA2045MessageGetTemperatureOffsetResponse.h  CEA2045MessageGetUTCTimeResponse.h  CEA2045MessageIntermediate.h  CEA2045MessageIntermediateResponse.h  CEA2045MessageMacros.h  CEA2045MessageSetEnergyPriceRequest.h  CEA2045MessageSetSetpointsRequest.h  CEA2045MessageSetTemperatureOffsetRequest.h  CEA2045MessageStartCyclingRequest.h  CEA2045MessageTerminateCyclingRequest.h  CEA2045MessageTypeSupported.h  ConvertEnums.cpp  ConvertEnums.h
cea2045/cea2045/processmessage/: IProcessMessage.h  ISGD.h  IUCM.h  ProcessMessageSGD.cpp  ProcessMessageSGD.h  ProcessMessageUCM.cpp  ProcessMessageUCM.h
cea2045/cea2045/util/: CEA2045Time.cpp  CEA2045Time.h  Checksum.cpp  Checksum.h  MSTimer.cpp  MSTimer.h
sample2/sample2/: UCMImpl.cpp  UCMImpl.h  main.cpp
test/test/: main.cpp
test/test/unit/: CEA2045MesssageUnitTest.cpp  CEA2045TimeUnitTest.cpp  ChecksumUnitTest.cpp
(+15 files in other folders)
